olympic web app

--- a/MVC_Xiong/Views/Home/Index.cshtml
+++ b/MVC_Xiong/Views/Home/Index.cshtml
@@ -4,5 +4,5 @@
 
 <div class="text-center">
     <h1 class="display-4">Luke Xiong</h1>
-    <p>Welcome Professor! This Page is for all my class assignments in CIS 174. Please use Menu to find an assignment.</p>
+    <p>This Page is for all my class assignments in CIS 174. Please use Menu to find an assignment.</p>
 </div>
