--- a/MVC_Xiong/Views/Contacts1/Index.cshtml
+++ b/MVC_Xiong/Views/Contacts1/Index.cshtml
@@ -1,10 +1,10 @@
 ﻿@model IEnumerable<MVC_Xiong.Models.Contacts>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Contacts";
 }
 
-<h1>Index</h1>
+<h1>Contacts</h1>
 
 <p>
     <a asp-action="Create">Create New</a>
