--- a/MVC_Xiong/Views/Olympic/Index.cshtml
+++ b/MVC_Xiong/Views/Olympic/Index.cshtml
@@ -1,10 +1,59 @@
-﻿@using Microsoft.AspNetCore.Http
-@model FlagViewModel
-
+﻿@model FlagViewModel
 @{ 
-    // int num = Context.Session.GetInt32("num"); - getting error
-    // var team = Context.Session.GetObject<Flag>("flag");
-    // page 331 examples for extension methods for single or list
-}
+    ViewData["Title"] = "Olympic Countries & Categories";
 
-<div>@Context.Session.GetInt32("num")</div>
+}
+<div class="row">
+    <div class="col-sm-3">
+        <h3 class="mt-3">Countries</h3>
+        <div class="list-group">
+            <ul> 
+            @foreach(Games oly in Model.Games)
+            {
+                <li>
+                <a asp-action="Index"
+                   asp-route-activeOly="@oly.Game"
+                   asp-route-activeCat="@Model.ActiveCat"
+                   class="list-group-item @Model.CheckActiveOly(oly.Game)">@oly.Game
+                </a>
+                    </li>
+            }
+                </ul>
+        </div>
+        <h3 class="mt-3">Categories</h3>
+        <div class="list-group">
+            <ul>
+            @foreach (Sports cat in Model.Sport)
+            {
+                <li>
+                <a asp-action="Index"
+                   asp-route-activeOly="@Model.ActiveOly"
+                   asp-route-activeCat="@cat.Sport"
+                   class="list-group-item @Model.CheckActiveCat(cat.Sport)">@cat.Sport
+                    </a>
+                    </li>
+            }
+                </ul>
+        </div>
+    </div>
+    <div class="col-sm-9">
+        <ul class="list-inline">
+            @foreach (Countries flag in Model.Flags)
+            {
+                <li class="list-inline-item">
+                    <form asp-action="Details" method="post">
+                        <button class="bg-white border-0" type="submit">
+                    <img src="~/lib/flags/@(flag.Country).JPG" alt="@flag.Country"
+                         title=" @flag.Country | @flag.Game.Game | @flag.Sport.Sport" />
+
+                            </button>
+                        <input type="hidden" asp-for="@flag"/>
+                        <input type="hidden" asp-for="ActiveOly" />
+                        <input type="hidden" asp-for="ActiveCat" />
+
+                        </form>
+                </li>
+            }
+        </ul>
+    </div>
+</div>
