input validation and database

--- a/MVC_Xiong/Views/Shared/_Layout.cshtml
+++ b/MVC_Xiong/Views/Shared/_Layout.cshtml
@@ -85,6 +85,7 @@
                 <a class="nav-link text-dark" asp-area="" asp-controller="Contacts1" asp-action="Index">Contact App</a>
                 <a class="nav-link text-dark" asp-area="" asp-controller="Assignment" asp-action="Index">Assignment 6.1</a>
                 <a class="nav-link text-dark" asp-area="" asp-controller="Olympic" asp-action="Index">Olympics</a>
+                <a class="nav-link text-dark" asp-area="" asp-controller="Ticket" asp-action="Index">Ticket</a>
             </div>
         </div>
     </div>
