--- a/MVC_Xiong/Views/Home/Index.cshtml
+++ b/MVC_Xiong/Views/Home/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@using Microsoft.AspNetCore.Http
+@{
     ViewData["Title"] = "Home Page";
 }
 
@@ -6,3 +7,5 @@
     <h1 class="display-4">Luke Xiong</h1>
     <p>This Page is for all my class assignments in CIS 174. Please use Menu to find an assignment.</p>
 </div>
+
+<div>@Context.Session.GetInt32("num")</div>
