Added TagHelper for submit button in views

--- a/MVC_Xiong/Views/Ticket/Add.cshtml
+++ b/MVC_Xiong/Views/Ticket/Add.cshtml
@@ -25,6 +25,6 @@
             <option value=""></option>
         </select>
     </div>
-    <button type="submit" class="btn btn-primary">Add</button>
+    <submit-button type="submit" class="mr-2 btn btn-primary">Add</submit-button>
     <a asp-action="Index" class="btn btn-primary">Cancel</a>
 </form>
