--- a/MVC_Xiong/Views/Ticket/Index.cshtml
+++ b/MVC_Xiong/Views/Ticket/Index.cshtml
@@ -64,8 +64,8 @@
                             <button type="submit"
                                     name="@nameof(ToDo.StatusId)" value="closed"
                                     class="btn btn-primary btn-sm">Completed</button>
-                            <button type="submit"
-                                    class="btn btn-primary btn-sm">Delete</button>
+                            <submit-button type="submit"
+                                    class="mr-2 btn btn-primary btn-sm">Delete</submit-button>
                         </form>
                     </td>
                 </tr>
